--- a/frontend/src/pages/CSS/LoginSignup.css
+++ b/frontend/src/pages/CSS/LoginSignup.css
@@ -1,6 +1,6 @@
 .loginsignup{
     width: 100%;
-    
+    padding-bottom: 6rem;
     background: #fce3fe;
     padding-top: 100px;
 
@@ -29,4 +29,34 @@
     outline: none;
     color: #5c5c5c;
     font-size: 18px;
+}
+.loginsignup-container button{
+    width: 580px;
+    height: 72px;
+    color: white;
+    background: #ff4141;
+    margin-top: 30px;
+    border: none;
+    font-size: 24px;
+    font-weight: 500;
+    cursor: pointer;
+}
+.loginsignup-login{
+    margin-top: 20px;
+    color: #5c5c5c;
+    font-size: 18px;
+    font-weight: 500;
+}
+.loginsignup-login span{
+    color: #ff4141;
+    font-weight: 600;
+}
+.loginsignup-agree{
+    display: flex;
+    align-items: center;
+    margin-top: 25px;
+    gap: 20px;
+    color: #5c5c5c;
+    font-size: 18px;
+    font-weight: 500;
 }
